changes for docker compile

--- a/Vue/src/assets/scss/argon.scss
+++ b/Vue/src/assets/scss/argon.scss
@@ -59,12 +59,12 @@
 
 // Argon utilities and components
 
-@import "custom/reboot";
-@import "custom/utilities";
-@import "custom/components";
+@import "custom/_reboot";
+@import "custom/_utilities";
+@import "custom/_components";
 
 // Vendor (Plugins)
 
-@import "custom/vendors";
+@import "custom/_vendors";
 
 
