--- a/Vue/src/assets/scss/custom/_components.scss
+++ b/Vue/src/assets/scss/custom/_components.scss
@@ -2,30 +2,30 @@
 // Components
 //
 
-@import "custom/alert";
-@import "custom/avatar";
-@import "custom/badge";
-@import "custom/buttons";
-@import "custom/card";
-@import "custom/chart";
-@import "custom/close";
-@import "custom/content";
-@import "custom/custom-forms";
-@import "custom/dropdown";
-@import "custom/footer";
-@import "custom/forms";
-@import "custom/header";
-@import "custom/icons";
-@import "custom/input-group";
-@import "custom/list-group";
-@import "custom/map";
-@import "custom/mask";
-@import "custom/modal";
-@import "custom/nav";
-@import "custom/navbar";
-@import "custom/pagination";
-@import "custom/popover";
-@import "custom/progress";
-@import "custom/separator";
-@import "custom/tables";
-@import "custom/type";
+@import "_alert";
+@import "_avatar";
+@import "_badge";
+@import "_buttons";
+@import "_card";
+@import "_chart";
+@import "_close";
+@import "_content";
+@import "_custom-forms";
+@import "_dropdown";
+@import "_footer";
+@import "_forms";
+@import "_header";
+@import "_icons";
+@import "_input-group";
+@import "_list-group";
+@import "_map";
+@import "_mask";
+@import "_modal";
+@import "_nav";
+@import "_navbar";
+@import "_pagination";
+@import "_popover";
+@import "_progress";
+@import "_separator";
+@import "_tables";
+@import "_type";
